client/src/styles/App.scss
/* ... */
.sidebar {
  display        : flex;
  flex-direction : column;
  height         : 100%;
  position       : relative;
  overflow       : hidden;

  // Sidebar (Flex) Column //
  & .column {
    display         : flex;
    flex            : 1;
    flex-direction  : column;
    justify-content : flex-start;
    align-items     : center;
    width           : 300px;
    height          : 100%;
    border-top      : 10px solid $mainRasp;
    border-bottom   : 10px solid $mainRasp;

    // Sidebar Header Section //
    & .section.header {
      display         : flex;
      flex-direction  : column;
      justify-content : center;
      align-items     : center;
      width           : 100%;
      padding         : 5px 0;

      > .logo {
        display         : flex;
        flex            : 1;
        justify-content : center;
        align-items     : center;
        width           : 100%;
        height          : 100px;
        padding         : 10px 0;

        > img {
          display         : flex;
          justify-content : center;
          align-items     : center;
          height          : 100%;
          object-fit      : cover;
          object-position : center;
        }
      }

      & .banner {
        display         : flex;
        justify-content : center;
        align-items     : center;
        width           : 100%;
        font-family     : 'Gotham Black Regular', sans-serif;
        font-size       : 1.5rem;
        color           : $mainWhite;
        padding         : 15px 0;
        background      : $mainRasp;
        //background      : linear-gradient(rgba($mainRasp, .75), $mainRasp, $mainRasp, rgba($mainRasp, .75));
      }
    }

    // Sidebar Body Section //
    & .body {
      display                    : flex;
      flex                       : 1 0;
      flex-direction             : column;
      width                      : calc(100% - 10px); // -10px and 3px padding for scrollbar
      padding-right              : 3px;
      overflow-y                 : auto;
      -webkit-overflow-scrolling : auto;

      & .section {
        display        : flex;
        flex-direction : column;
        flex-shrink    : 0;
        width          : 100%;
        padding        : 15px 0;

        > .title {
          display         : flex;
          flex            : 1 0;
          justify-content : space-around;
          align-self      : center;
          align-items     : center;
          width           : 90%;
          padding         : 10px 0;
          font     : {
            family : 'Gotham Black Regular';
            size   : 20px;
          }
          cursor          : default;
          border-radius   : 4px;
          box-shadow      : $paperBoxShadow;
        }

        // Sidebar Links Section //
        &.links {
          display     : flex;
          align-items : center;

          & .list {
            width    : 90%;
            margin   : 10px 0 0 0;
            overflow : hidden;

            & .link {
              text-decoration : none;

              & .text {
                font-family     : 'Gotham Medium', sans-serif;
                color           : $mainBlack;
                text-decoration : none;
              }
            }
          }
        }

        // Sidebar Event Section //
        &.event {
          align-items : center;
          padding     : 20px 0;

          & .switcher {
            display         : flex;
            flex            : 1;
            justify-content : center;
          }
          // Event Card
          & .event.card {
            display        : flex;
            flex-direction : column;
            width          : 90%;
            margin         : 10px 0;
            box-shadow     : $cardBoxShadow2;

            &:hover {
              box-shadow : $cardBoxShadow4;
            }

            & .divider {
              display    : flex;
              align-self : center;
              width      : 25%;
              height     : 1px;
              margin     : 5px 0;
              background : $mainRasp;
            }

            & .link {
              display                 : flex;
              flex                    : .5 0;
              justify-content         : center;
              align-items             : center;
              text-decoration         : none;
              border-top-left-radius  : 0;
              border-top-right-radius : 0;
            }

            & .row {
              display : flex;

              &.center {
                justify-content : center;
              }
            }

            &:last-of-type {margin-bottom : 0;}
          }
        }
      }
    }

    // Sidebar Footer Section //
    & .section.footer {
      justify-self       : end;
      justify-content    : center;
      align-items        : center;
      width              : 100%;
      padding            : 25px 0;
      margin-top         : 5px;
      z-index            : 0; // to show over body
      box-shadow         : 0px -1px 8px rgba($mainBlack, 0.4);
      -webkit-box-shadow : 0px -1px 8px rgba($mainBlack, 0.4);
      -moz-box-shadow    : 0px -1px 8px rgba($mainBlack, 0.4);
      transition         : all .15s ease-out;
      -webkit-transition : all .15s ease-out;
      -moz-transition    : all .15s ease-out;

      &:hover {
        box-shadow         : 0px -4px 8px rgba($mainBlack, 0.4);
        -webkit-box-shadow : 0px -4px 8px rgba($mainBlack, 0.4);
        -moz-box-shadow    : 0px -4px 8px rgba($mainBlack, 0.4);
      }

      & .icons {

      }
    }
  }
}
// END SIDEBAR //

// Material-UI Styles //
.paper {
  box-shadow            : $paperBoxShadow;
  -webkit-box-shadow    : $paperBoxShadow;
  border-radius         : 4px;
  -webkit-border-radius : 4px;
}
/* ... */

